--- a/example/build.gradle
+++ b/example/build.gradle
@@ -24,5 +24,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile project(':sdk')
+    compile project(':cf-sdk')
 }
